--- a/.github/workflows/copilot-setup-steps.yml
+++ b/.github/workflows/copilot-setup-steps.yml
@@ -6,11 +6,10 @@ jobs:
       run:
         shell: bash
     runs-on: ubuntu-22.04
-    needs:
-      - pre-commit
     env:
-      BUILD_MODE: release
+      BUILD_MODE: debug
       RUST_BACKTRACE: 1
+      COPILOT_AGENT_FIREWALL_ALLOW_LIST: "crates.io,index.crates.io,static.crates.io,doc.rust-lang.org,docs.rs"
     services:
       redis:
         image: redis
@@ -36,6 +35,15 @@ jobs:
         with:
           egress-policy: audit
 
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: "npm"
+
+      - name: Install JavaScript dependencies
+        run: npm ci
+
       - name: Checkout repository
         # https://github.com/actions/checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -44,16 +52,5 @@ jobs:
         uses: ./.github/actions/common-setup
         with:
           python-version: 3.13
-          free-disk-space: "true"
 
-      - name: Install Nautilus CLI and run init postgres
-        run: |
-          make install-cli
-          nautilus database init --schema ${{ github.workspace }}/schema/sql
-        env:
-          POSTGRES_HOST: localhost
-          POSTGRES_PORT: 5432
-          POSTGRES_USERNAME: postgres
-          POSTGRES_PASSWORD: pass
-          POSTGRES_DATABASE: nautilus
 
