--- a/.github/workflows/copilot-setup-steps.yml
+++ b/.github/workflows/copilot-setup-steps.yml
@@ -1,11 +1,11 @@
-name: Copilot Setup Steps
+name: build
 
 jobs:
   copilot-setup-steps:
     defaults:
       run:
         shell: bash
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     env:
       BUILD_MODE: debug
       RUST_BACKTRACE: 1
@@ -34,6 +34,19 @@ jobs:
       - uses: step-security/harden-runner@4d991eb9b905ef189e4c376166672c3f2f230481 # v2.11.0
         with:
           egress-policy: audit
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: "npm"
+
+      - name: Install JavaScript dependencies
+        run: npm ci
+
+      - name: Checkout repository
+        # https://github.com/actions/checkout
+        uses: actions/checkout@v4
 
       - name: Common setup
         uses: ./.github/actions/common-setup
